# SEC_EdgarAPI

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/sec_edgar_api/: __init__.py  app.py  config.py  dependencies.py
src/sec_edgar_api/clients/: sec_client.py
src/sec_edgar_api/models/: filings.py  financials.py
src/sec_edgar_api/routes/: __init__.py  filings.py  financials.py
src/sec_edgar_api/services/: financials_service.py  tenk_service.py
tests/: test_tenk_service.py
tests/services/: test_financials_service.py
